Tests/Resources/Bad/ERROR_EXCEPTION_TYPE_NOT_DECLARED/catch.st
language core;
extend with  #exceptions;

fn main(n : Nat) -> Nat {
	return try { 0 } catch { x => x }
}
